--- a/style.css
+++ b/style.css
@@ -54,3 +54,9 @@
 .is-hidden {
   display: none;
 }
+.build-info {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
