--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ body {
 .is-absolute {
   position: absolute;
 }
+.is-absolute-center {
+  position: fixed;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%);
+}
 .btn-top {
   top: 0%;
   left: 50%;
