--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ body {
 }
 .is-absolute-center {
   position: fixed;
-  top: 15%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
 }
 .btn-top {
   top: 0%;
@@ -67,4 +67,28 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.tst_properties {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, 68px);
+  align-items: center;
+  width: 70%;
+  min-width: 390px;
+  transition: 0.4s;
+}
+.tst_square {
+  width: 100%;
+  height: 120px;
+  background-color: whitesmoke;
+  border: 2px solid black;
+  border-top: 0px;
+  border-radius: 0 0 10px 10px;
+}
+.tst_btn {
+  width: 35%;
 }
