--- a/style.css
+++ b/style.css
@@ -104,3 +104,8 @@ body {
   object-fit: cover;
   object-position: center;
 }
+.contact_card {
+  max-width: 650px;
+  min-width: 420px;
+  width: 100%;
+}
