--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@ body {
 }
 .is-absolute-center {
   position: fixed;
-  top: 50%;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: 0.4s;
 }
 .btn-top {
   top: 0%;
